feat: Add Text Search column for some tables and change some domain database from mongo to postgresql
