# user/goal_model.go
@@ -7,6 +7,8 @@ import (
 type GoalModel struct {
 	Id          uint64
 	OrgPeriodId uint64
+	VisionText  string
+	MissionText string
 	CreatedAt   time.Time
 	Vision      map[string]interface{}
 	Mission     map[string]interface{}
